fix notification alignment issues

--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -26,6 +26,9 @@
 .navbar__right {
   gap: 3rem;
 }
+.navbar__right {
+  position: relative;
+}
 .hamburger-btn,
 .close-btn {
   font-size: 3rem;
